--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "moment": "^2.19.1",
-    "react": "^16.0.0",
+    "moment": "^2.24.0",
+    "react": "^16.8.6",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-dates": "^13.0.6",
-    "react-dom": "^16.0.0",
-    "react-google-maps": "^9.0.1",
-    "react-moment": "^0.6.5",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
+    "react-dates": "^20.1.0",
+    "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
+    "react-moment": "^0.9.2",
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.0.0",
     "react-stars": "^2.2.5",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,10 +25,22 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
-    "mocha": "^5.0.1",
+    "chai": "^4.2.0",
+    "enzyme": "^3.9.0",
+    "mocha": "^6.1.4",
     "react-addons-test-utils": "^15.6.2",
-    "sinon": "^4.4.0"
+    "sinon": "^7.3.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
